cap-1/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox-deployment
  labels:
    name: sandbox-deployment
spec:
  replica: 2
  selector: 
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        name:  sandbox
    spec:
      containers:
      - image:  sandbox
        name:  main-sandbox-container
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "1G"
            memory: "500Mi"
          requests:
            cpu: "500m"
            memory: "250M"
        livenessProbe:
          httpGet:
            path: /sandbox/health
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /sandbox/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  main-server
